[tool.poetry]
name = "forum-fastapi"
version = "0.1.0"
description = ""
authors = ["ilyaKiselev <kisel.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

